vest-dsl/test/bad/choice_ints_type_mismatch2.vest
t = enum {
  A = 1,
  B = 2,
  C = 3,
}

fmt(@tag: t) = choose(@tag) {
  1 => u8,
  2 => u16,
  3 => u32,
}
